--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "start http://localhost:3033 && next dev -p 3033",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,21 +13,31 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
+    "framer-motion": "^10.12.2",
     "libphonenumber-js": "^1.10.26",
     "next": "^13.2.4",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^8.0.5",
+    "react-use": "^17.4.0",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.3",
     "typescript": "5.0.4",
+    "underscore": "^1.13.6",
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@types/underscore": "^1.11.4",
     "sass": "^1.62.0"
   }
 }
