.gitignore is now working

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 FACEBOOK_CLIENT_ID=6156636331061471
 FACEBOOK_CLIENT_SECRET=cb43bc8502af0d9c090b8f8ebc107c9d
+DATABASE_URL=mongodb+srv://cloud179200:kS9UgD7OfGwqMIkK@datn-va-cluster.hck4xms.mongodb.net/DATN
