--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.13.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@types/underscore": "^1.11.4",
+    "prisma": "^4.13.0",
     "sass": "^1.62.0"
   }
 }
