--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.2",
+    "jsonwebtoken": "^9.0.0",
     "libphonenumber-js": "^1.10.26",
     "next": "^13.2.4",
     "next-auth": "^4.22.0",
@@ -39,6 +41,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/underscore": "^1.11.4",
     "prisma": "^4.13.0",
     "sass": "^1.62.0"
