--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
     "bcrypt": "^5.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -26,11 +27,13 @@
     "framer-motion": "^10.12.2",
     "jsonwebtoken": "^9.0.0",
     "libphonenumber-js": "^1.10.26",
+    "mongodb": "^5.4.0",
     "next": "^13.2.4",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
@@ -38,6 +41,7 @@
     "redux-saga": "^1.2.3",
     "typescript": "5.0.4",
     "underscore": "^1.13.6",
+    "uuid": "^9.0.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
