--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,7 +45,16 @@
     "no-useless-catch": "off",
     "react/no-unescaped-entities": "off",
     "no-unreachable": "off",
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": ["error"]
+    "no-unused-vars": ["error", { 
+      "argsIgnorePattern": "^_",
+      "varsIgnorePattern": "^_",
+      "caughtErrorsIgnorePattern": "^_"
+    }],
+    "@typescript-eslint/no-unused-vars": ["error", { 
+      "argsIgnorePattern": "^_",
+      "varsIgnorePattern": "^_",
+      "caughtErrorsIgnorePattern": "^_"
+    }],
+    "react-hooks/rules-of-hooks":"warn"
   }
 }
