--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
     "@next-auth/prisma-adapter": "^1.0.6",
@@ -25,8 +26,11 @@
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.2",
+    "heroicons": "^2.0.17",
     "jsonwebtoken": "^9.0.0",
     "libphonenumber-js": "^1.10.26",
+    "material-ui-popup-state": "^5.0.8",
+    "moment": "^2.29.4",
     "mongodb": "^5.4.0",
     "next": "^13.2.4",
     "next-auth": "^4.22.0",
@@ -34,6 +38,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.8.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
