--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -55,6 +55,7 @@
       "varsIgnorePattern": "^_",
       "caughtErrorsIgnorePattern": "^_"
     }],
+    "@typescript-eslint/no-empty-function": "warn",
     "react-hooks/rules-of-hooks":"warn"
   }
 }
