--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
+    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
@@ -30,8 +30,10 @@
     "material-ui-popup-state": "^5.0.8",
     "moment": "^2.29.4",
     "mongodb": "^5.4.0",
+    "mui-chips-input": "^2.0.1",
     "next": "^13.2.4",
     "next-auth": "^4.22.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
@@ -42,12 +44,15 @@
     "react-use": "^17.4.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
+    "sharp": "^0.32.1",
+    "tss-react": "^4.8.3",
     "typescript": "5.0.4",
     "underscore": "^1.13.6",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/underscore": "^1.11.4",
     "prisma": "^4.13.0",
