--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,16 +41,27 @@
     "import/namespace": 2,
     "import/default": 2,
     "import/export": 2,
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true
+      }
+    },
     "no-debugger": "off",
     "no-useless-catch": "off",
     "react/no-unescaped-entities": "off",
     "no-unreachable": "off",
-    "@typescript-eslint/no-unused-vars": ["error", { 
-      "argsIgnorePattern": "^_",
-      "varsIgnorePattern": "^_",
-      "caughtErrorsIgnorePattern": "^_"
-    }],
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ],
     "@typescript-eslint/no-empty-function": "warn",
-    "react-hooks/rules-of-hooks":"warn"
+    "react-hooks/rules-of-hooks": "warn"
   }
 }
