--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "babel-plugin-module-resolver": "^5.0.0",
     "bcrypt": "^5.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -31,7 +32,7 @@
     "moment": "^2.29.4",
     "mongodb": "^5.4.0",
     "mui-chips-input": "^2.0.1",
-    "next": "^13.2.4",
+    "next": "^13.4.2",
     "next-auth": "^4.22.0",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
@@ -42,6 +43,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "sharp": "^0.32.1",
@@ -52,9 +54,11 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.21.4",
     "@svgr/webpack": "^8.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/underscore": "^1.11.4",
+    "babel-loader": "^9.1.2",
     "prisma": "^4.13.0",
     "sass": "^1.62.0"
   }
