--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
+    "@mui/styles": "^5.12.3",
+    "@mui/x-date-pickers": "^6.4.0",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
     "@reduxjs/toolkit": "^1.9.5",
@@ -22,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "formik": "^2.2.9",
