--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "start http://localhost:3033 && next dev -p 3033",
+    "dev": "start http://localhost:3033 && cross-env NODE_OPTIONS='--inspect' next dev -p 3033",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,7 +13,6 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.0",
-    "@mui/styles": "^5.12.3",
     "@mui/x-date-pickers": "^6.4.0",
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
@@ -24,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
