--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "flag-icons": "^6.6.6",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.2",
     "jsonwebtoken": "^9.0.0",
@@ -35,7 +36,7 @@
     "moment": "^2.29.4",
     "mongodb": "^5.4.0",
     "mui-chips-input": "^2.0.1",
-    "next": "^13.2.4",
+    "next": "^13.4.2",
     "next-auth": "^4.22.0",
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
