--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "start http://localhost:3033 && cross-env NODE_OPTIONS='--inspect' next dev -p 3033",
-    "build": "npx prisma generate && next build",
+    "dev": "start http://localhost:3033 && next dev -p 3033",
+    "build": "npx prisma generate --schema=./schema.prisma && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,7 +15,11 @@
     "@mui/material": "^5.12.0",
     "@mui/x-date-pickers": "^6.4.0",
     "@next-auth/prisma-adapter": "^1.0.6",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.14.1",
+    "@react-email/button": "^0.0.8",
+    "@react-email/components": "^0.0.6",
+    "@react-email/html": "^0.0.4",
+    "@react-email/render": "^0.0.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
@@ -39,11 +43,14 @@
     "next": "^13.4.2",
     "next-auth": "^4.22.0",
     "next-redux-wrapper": "^8.1.0",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-email": "^1.9.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
@@ -61,11 +68,13 @@
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.21.4",
     "@faker-js/faker": "^8.0.1",
+    "@next/eslint-plugin-next": "^13.4.2",
     "@svgr/webpack": "^8.0.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/underscore": "^1.11.4",
     "babel-loader": "^9.1.2",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.1",
     "sass": "^1.62.0"
   }
 }
