--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "^13.4.2",
     "next-auth": "^4.22.0",
     "next-redux-wrapper": "^8.1.0",
+    "next-swagger-doc": "^0.3.6",
     "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
@@ -58,6 +59,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "sharp": "^0.32.1",
+    "swagger-ui-react": "^4.18.3",
     "tss-react": "^4.8.3",
     "typescript": "5.0.4",
     "underscore": "^1.13.6",
@@ -74,6 +76,7 @@
     "@svgr/webpack": "^8.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/nodemailer": "^6.4.7",
+    "@types/swagger-ui-react": "^4.18.0",
     "@types/underscore": "^1.11.4",
     "@typescript-eslint/parser": "^5.0.0",
     "babel-loader": "^9.1.2",
