--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nextjs-13",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "start http://localhost:3000 && next dev -p 3000",
     "build": "npx prisma generate --schema=./schema.prisma && next build",
@@ -27,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "chalk": "^5.2.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "eslint": "8.38.0",
