--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "start http://localhost:3000 && next dev -p 3000",
     "build": "npx prisma generate --schema=./schema.prisma && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "e2e": "start-server-and-test dev http://localhost:3000 \"cypress open --e2e\"",
+    "e2e:headless": "start-server-and-test dev http://localhost:3000 \"cypress run --e2e\"",
+    "component": "cypress open --component",
+    "component:headless": "cypress run --component"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -61,6 +65,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
     "sharp": "^0.32.1",
+    "start-server-and-test": "^2.0.0",
     "swagger-ui-react": "^4.18.3",
     "tss-react": "^4.8.3",
     "typescript": "5.0.4",
@@ -83,6 +88,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "babel-loader": "^9.1.2",
     "csstype": "^3.0.10",
+    "cypress": "^12.13.0",
     "prisma": "^4.14.1",
     "sass": "^1.62.0"
   }
